--- a/docs/101.md
+++ b/docs/101.md
@@ -159,8 +159,7 @@ sučelja za instalaciju *desktop* aplikacija. Na slici
 [1](#fig:wininstall){reference-type="ref" reference="fig:wininstall"}
 vidimo kako izgleda pokretanje instalacije novijih verzija Pythona.
 
-![Instalacija Pythona na Windows OS-u](windows_install){#fig:wininstall
-width="\\textwidth"}
+![Instalacija Pythona na Windows OS-u](images/windows_install.png)
 
 Dok klik na \"Install Now\" obavlja većinu posla, ipak je korisno
 primijetiti neke detalje i uključiti dodatne mogućnosti. Python će se po
@@ -208,8 +207,8 @@ koncepata i eksperimentaciju s mogućnostima. IDLE se ponaša kao i većina
 aplikacija s grafičkim sučeljem, odnosno moguće ju je pokrenuti kroz
 *Start menu* ili ekvivalente u drugim operativnim sustavima.
 
-![Izvršavanje Python kôda putem sučelja IDLE](idle){#fig:idle
-width="\\textwidth"}
+![Izvršavanje Python kôda putem sučelja IDLE](images/idle.png)
+
 
 Kada pokrenemo IDLE, dočekati će nas glavno sučelje ovog programa koje
 je prikazano na slici [2](#fig:idle){reference-type="ref"
@@ -233,7 +232,7 @@ je vidljivo na slici [3](#fig:idle_text){reference-type="ref"
 reference="fig:idle_text"}. Datoteka sadrži tipičan program za prvi
 susret s programiranjem koji ćemo kasnije podrobnije analizirati.
 
-![IDLE i pisanje tekstualnih datoteka](idle_text){#fig:idle_text
+![IDLE i pisanje tekstualnih datoteka](images/idle_text.png){#fig:idle_text
 width="\\textwidth"}
 
 Novi prozor koji nam se otvorio je jednostavan program za pisanje
@@ -248,7 +247,7 @@ radnje je vidljiv na slici [4](#fig:idle_text_run){reference-type="ref"
 reference="fig:idle_text_run"}.
 
 ![IDLE i rezultat izvršavanja
-programa](idle_text_run){#fig:idle_text_run width="\\textwidth"}
+programa](images/idle_text_run.png)
 
 Upravo smo izvršili računalni program! Ovu datoteku nismo morali
 pokretati kroz IDLE, mogli smo je i jednostavno pokrenuti direktno iz
